Twitterとメールアドレスを更新

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
         <div class="section">
             <h2>Contact</h2>
-            <p>Twitter: <a href="https://twitter.com/yourprofile" target="_blank">@yourprofile</a></p>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p>Twitter: <a href="https://x.com/kaifayong112185" target="_blank">Pyon'sApplications(՞ o̴̶̷̤ ̫ o̴̶̷̤ ՞)@kaifayong112185</a></p>
+            <p>Email: <a href="mailto:takeapps88@gmail.com">takeapps88@gmail.com</a></p>
         </div>
     </div>
 </body>
