自己紹介文を更新

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="section">
             <h2>Self-Introduction</h2>
-            <p>Hello! I am a passionate app developer with experience in creating various applications.</p>
+            <p>From Japan! I'm a hobbyist app developer, creating unique experiences with Flutter in my spare time. Curious? Check out my creations!</p>
         </div>
         <div class="section">
             <h2>Released Apps</h2>
